# greens

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  default.nix  deny.toml  flake.nix  justfile  shell.nix
crates/greens-core/: Cargo.toml
crates/greens-core/src/: io_interface.rs  ioreq.rs  lib.rs
crates/greens-pci/: Cargo.toml
crates/greens-pci-virtio/: Cargo.toml
crates/greens-pci-virtio/src/: lib.rs  pci.rs  pci_cap.rs  pci_cfg_cap.rs  pci_common_cfg.rs  pci_device_cfg.rs  pci_isr_cfg.rs  pci_notify_cfg.rs
crates/greens-pci/src/: bar.rs  bar_region.rs  capability.rs  config_handler.rs  configuration_space.rs  device.rs  function.rs  interrupt.rs  intx.rs  lib.rs  msi.rs  msix.rs  registers.rs
crates/greens-pci/src/utils/: mod.rs  register_block.rs
crates/greens-sel4/: Cargo.toml  build.rs  wrapper.h
crates/greens-sel4-pci-vhost-net/: Cargo.toml
crates/greens-sel4-pci-vhost-net/src/: device_model.rs  error.rs  guest_memory.rs  main.rs  pci.rs  tap.rs  vhost_net.rs
crates/greens-sel4/src/: bindings.rs  io_interface.rs  io_interface_config.rs  ioreq.rs  lib.rs  rpc.rs
crates/greens-sel4/src/rpc/: doorbell.rs
crates/greens-sys-linux/: Cargo.toml
crates/greens-sys-linux/src/: eventfd.rs  lib.rs  mmap.rs
