[package]
name = "greens-pci-virtio"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
greens-pci = { path = "../greens-pci", features = ["std"] }
thiserror = "1.0"
virtio-device = { git = "https://github.com/rust-vmm/vm-virtio", rev = "ef53fb803aca6b4c1dcabf183748375d3f29ded4" }
virtio-queue = { git = "https://github.com/rust-vmm/vm-virtio", rev = "ef53fb803aca6b4c1dcabf183748375d3f29ded4" }
