[package]
name = "greens-pci-virtio"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
greens-pci = { path = "../greens-pci", features = ["std"] }
thiserror = "2.0"
virtio-device = { git = "https://github.com/rust-vmm/vm-virtio", tag = "virtio-queue-v0.17.0" }
virtio-queue = { git = "https://github.com/rust-vmm/vm-virtio", tag = "virtio-queue-v0.17.0" }
