[package]
name = "greens-sel4"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
vmm-sys-util = "0.15"
zerocopy = { version = "0.8", features = ["derive"] }
greens-core = { path = "../greens-core" }
greens-sys-linux = { path = "../greens-sys-linux" }
libc = "0.2"
thiserror = "2.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(test)'] }

[build-dependencies]
bindgen = { version = "0.72", default-features = true, features = [
  "experimental",
] }
cc = "1.0"
